--- a/example/src/main/res/navigation/nav_graph.xml
+++ b/example/src/main/res/navigation/nav_graph.xml
@@ -3,17 +3,17 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/FirstFragment">
+    app:startDestination="@id/MerchantSettingsFragment">
 
     <fragment
-        android:id="@+id/FirstFragment"
-        android:name="com.example.myapplication.FirstFragment"
+        android:id="@+id/MerchantSettingsFragment"
+        android:name="com.example.myapplication.MerchantSettingsFragment"
         android:label="Settings"
-        tools:layout="@layout/fragment_first">
+        tools:layout="@layout/fragment_settings">
 
         <action
-            android:id="@+id/action_FirstFragment_to_SecondFragment"
-            app:destination="@id/SecondFragment"
+            android:id="@+id/action_MerchantSettingsFragment_to_MerchantCheckoutFragment"
+            app:destination="@id/MerchantCheckoutFragment"
             app:enterAnim="@anim/nav_default_enter_anim"
             app:exitAnim="@anim/nav_default_exit_anim"
             app:popEnterAnim="@anim/nav_default_pop_enter_anim"
@@ -42,10 +42,21 @@
     </fragment>
 
     <fragment
-        android:id="@+id/SecondFragment"
-        android:name="com.example.myapplication.SecondFragment"
+        android:id="@+id/MerchantCheckoutFragment"
+        android:name="com.example.myapplication.MerchantCheckoutFragment"
         android:label="Wallet"
-        tools:layout="@layout/fragment_second" />
+        tools:layout="@layout/fragment_universal_checkout">
+
+        <action
+            android:id="@+id/action_MerchantCheckoutFragment_to_MerchantResultFragment"
+            app:destination="@id/MerchantResultFragment"
+            app:enterAnim="@anim/nav_default_enter_anim"
+            app:exitAnim="@anim/nav_default_exit_anim"
+            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
+            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
+
+
+    </fragment>
 
     <fragment
         android:id="@+id/ThirdFragment"
@@ -67,7 +78,12 @@
 
         <action
             android:id="@+id/action_CountryPickerFragment_to_firstFragment"
-            app:destination="@id/FirstFragment" />
+            app:destination="@id/MerchantCheckoutFragment" />
     </fragment>
 
+    <fragment
+        android:id="@+id/MerchantResultFragment"
+        android:name="com.example.myapplication.MerchantResultFragment"
+        android:label="Result"
+        tools:layout="@layout/fragment_checkout_result" />
 </navigation>
