--- a/example/src/main/res/layout/fragment_settings.xml
+++ b/example/src/main/res/layout/fragment_settings.xml
@@ -221,12 +221,12 @@
         android:text="@string/huc_raw"
         app:backgroundTint="@color/primer"
         app:cornerRadius="8sp"
-        app:layout_constraintBottom_toTopOf="@id/hucUiButton"
+        app:layout_constraintBottom_toTopOf="@id/headlessCheckoutButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
-        android:id="@+id/hucUiButton"
+        android:id="@+id/headlessCheckoutButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
