--- a/example/src/main/res/layout/fragment_universal_checkout.xml
+++ b/example/src/main/res/layout/fragment_universal_checkout.xml
@@ -30,6 +30,7 @@
         app:cornerRadius="8sp"
         app:layout_constraintBottom_toTopOf="@+id/checkout_button"
         app:layout_constraintEnd_toEndOf="parent"
+        android:visibility="gone"
         app:layout_constraintStart_toStartOf="@+id/checkout_button" />
 
     <Button
@@ -42,6 +43,7 @@
         android:text="@string/show_checkout"
         app:backgroundTint="@color/primer"
         app:cornerRadius="8sp"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
