--- a/example/src/main/res/navigation/nav_graph.xml
+++ b/example/src/main/res/navigation/nav_graph.xml
@@ -54,15 +54,22 @@
             app:exitAnim="@anim/nav_default_exit_anim"
             app:popEnterAnim="@anim/nav_default_pop_enter_anim"
             app:popExitAnim="@anim/nav_default_pop_exit_anim" />
-
-
     </fragment>
 
     <fragment
         android:id="@+id/ThirdFragment"
         android:name="com.example.myapplication.HeadlessComponentsFragment"
         android:label="HUC"
-        tools:layout="@layout/fragment_third" />
+        tools:layout="@layout/fragment_third">
+
+        <action
+            android:id="@+id/action_MerchantComponentsFragment_to_MerchantResultFragment"
+            app:destination="@id/MerchantResultFragment"
+            app:enterAnim="@anim/nav_default_enter_anim"
+            app:exitAnim="@anim/nav_default_exit_anim"
+            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
+            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
+    </fragment>
 
     <fragment
         android:id="@+id/HeadlessRawFragment"
