--- a/example/src/main/res/layout/fragment_settings.xml
+++ b/example/src/main/res/layout/fragment_settings.xml
@@ -10,7 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:fitsSystemWindows="true"
-        app:layout_constraintBottom_toTopOf="@id/hucRawButton"
+        app:layout_constraintBottom_toTopOf="@id/vaultManagerButton"
         app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
@@ -216,6 +216,21 @@
             </com.google.android.material.textfield.TextInputLayout>
         </LinearLayout>
     </ScrollView>
+
+    <Button
+        android:id="@+id/vaultManagerButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginBottom="12dp"
+        android:layout_weight="1"
+        android:text="@string/huc_vault"
+        app:backgroundTint="@color/primer"
+        app:cornerRadius="8sp"
+        app:layout_constraintBottom_toTopOf="@id/hucRawButton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/hucRawButton"
