--- a/example/src/main/res/navigation/nav_graph.xml
+++ b/example/src/main/res/navigation/nav_graph.xml
@@ -37,6 +37,14 @@
             app:popExitAnim="@anim/nav_default_pop_exit_anim" />
 
         <action
+            android:id="@+id/action_FirstFragment_to_VaultManagerFragment"
+            app:destination="@id/VaultManagerFragment"
+            app:enterAnim="@anim/nav_default_enter_anim"
+            app:exitAnim="@anim/nav_default_exit_anim"
+            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
+            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
+
+        <action
             android:id="@+id/action_FirstFragment_to_countryPickerFragment"
             app:destination="@id/CountryPickerFragment" />
     </fragment>
@@ -87,6 +95,22 @@
             android:id="@+id/action_CountryPickerFragment_to_firstFragment"
             app:destination="@id/MerchantCheckoutFragment" />
     </fragment>
+
+    <fragment
+        android:id="@+id/VaultManagerFragment"
+        android:name="com.example.myapplication.HeadlessVaultManagerFragment"
+        android:label="Vault Manager"
+        tools:layout="@layout/fragment_vault_manager">
+
+        <action
+            android:id="@+id/action_VaultManagerFragment_to_MerchantResultFragment"
+            app:destination="@id/MerchantResultFragment"
+            app:enterAnim="@anim/nav_default_enter_anim"
+            app:exitAnim="@anim/nav_default_exit_anim"
+            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
+            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
+    </fragment>
+
 
     <fragment
         android:id="@+id/MerchantResultFragment"
