--- a/example/src/main/res/layout/fragment_nol_pay.xml
+++ b/example/src/main/res/layout/fragment_nol_pay.xml
@@ -28,6 +28,7 @@
 
     <TextView
         android:id="@+id/scanCard"
+        android:textColor="@color/black"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/background_fast_bank_transfer_code_description"
@@ -44,7 +45,7 @@
 
     <EditText
         android:id="@+id/mobileCountryCode"
-        android:layout_width="wrap_content"
+        android:layout_width="20dp"
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
         android:hint="Dialing country code"
