--- a/example/src/main/res/layout/fragment_nol_pay.xml
+++ b/example/src/main/res/layout/fragment_nol_pay.xml
@@ -45,7 +45,7 @@
 
     <EditText
         android:id="@+id/mobileCountryCode"
-        android:layout_width="20dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
         android:hint="Dialing country code"
