--- a/example/src/main/res/navigation/nav_graph.xml
+++ b/example/src/main/res/navigation/nav_graph.xml
@@ -7,9 +7,54 @@
 
     <fragment
         android:id="@+id/NolFragment"
-        android:name="io.primer.sample.NolFragment"
+        android:name="io.primer.sample.nolpay.NolFragment"
         android:label="Nol pay"
-        tools:layout="@layout/fragment_nol_pay" />
+        tools:layout="@layout/fragment_nol_pay">
+        <action
+            android:id="@+id/action_NolFragment_to_NolLinkFragment"
+            app:destination="@+id/NolLinkFragment"
+            app:enterAnim="@anim/nav_default_enter_anim"
+            app:exitAnim="@anim/nav_default_exit_anim"
+            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
+            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
+
+        <action
+            android:id="@+id/action_NolFragment_to_NolUnlinkFragment"
+            app:destination="@+id/NolPayUnlinkFragment"
+            app:enterAnim="@anim/nav_default_enter_anim"
+            app:exitAnim="@anim/nav_default_exit_anim"
+            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
+            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/NolLinkFragment"
+        android:name="io.primer.sample.nolpay.NolPayLinkFragment"
+        android:label="Nol Pay link"
+        tools:layout="@layout/fragment_nol_pay_link">
+
+
+        <action
+            android:id="@+id/action_NolLinkFragment_to_NolFragment"
+            app:destination="@id/NolFragment"
+            app:launchSingleTop="true"
+            app:popUpTo="@+id/nav_graph"
+            app:popUpToInclusive="true" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/NolPayUnlinkFragment"
+        android:name="io.primer.sample.nolpay.NolPayUnlinkFragment"
+        android:label="Nol Pay unlink"
+        tools:layout="@layout/fragment_nol_pay_unlink">
+
+        <action
+            android:id="@+id/action_NolUnlinkFragment_to_NolFragment"
+            app:destination="@id/NolFragment"
+            app:launchSingleTop="true"
+            app:popUpTo="@+id/nav_graph"
+            app:popUpToInclusive="true" />
+    </fragment>
 
     <fragment
         android:id="@+id/MerchantSettingsFragment"
