--- a/example/src/main/res/layout/fragment_nol_pay.xml
+++ b/example/src/main/res/layout/fragment_nol_pay.xml
@@ -34,6 +34,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Pay with Nol card"
+        android:visibility="gone"
         app:layout_constraintTop_toBottomOf="@id/unlinkNolCard" />
 
     <Button
