--- a/example/src/main/res/layout/fragment_nol_pay.xml
+++ b/example/src/main/res/layout/fragment_nol_pay.xml
@@ -6,13 +6,58 @@
     android:padding="@dimen/large_vertical_margin">
 
     <TextView
+        android:id="@+id/title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/large_vertical_margin"
+        android:text="Enter your phone number"
+        android:textColor="@color/black"
+        android:textSize="@dimen/primer_default_fontsize"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <EditText
+        android:id="@+id/mobileCountryCode"
+        android:layout_width="60dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/large_vertical_margin"
+        android:background="@android:color/transparent"
+        android:gravity="center"
+        android:hint="+971"
+        android:inputType="phone"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/title" />
+
+    <EditText
+        android:id="@+id/mobileNumber"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/large_vertical_margin"
+        android:background="@android:color/transparent"
+        android:hint="Mobile number"
+        android:inputType="phone"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/mobileCountryCode"
+        app:layout_constraintTop_toBottomOf="@id/title" />
+
+    <Button
+        android:id="@+id/getLinkedCards"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/large_vertical_margin"
+        android:text="Get linked cards"
+        app:layout_constraintTop_toBottomOf="@id/mobileNumber" />
+
+    <TextView
         android:id="@+id/cardsTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/large_vertical_margin"
         android:text="Linked cards:"
         android:textColor="@color/black"
         android:textStyle="bold"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/getLinkedCards" />
 
     <RadioGroup
         android:id="@+id/linkedCards"
