feat: Implemented async phone number validation

--- a/example/src/main/res/layout/fragment_nol_pay_unlink_otp.xml
+++ b/example/src/main/res/layout/fragment_nol_pay_unlink_otp.xml
@@ -45,4 +45,12 @@
         android:text="@string/next"
         app:layout_constraintBottom_toBottomOf="parent" />
 
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="30dp"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@id/nextButton" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
