--- a/example/src/main/res/layout/fragment_nol_pay_phone_fragment.xml
+++ b/example/src/main/res/layout/fragment_nol_pay_phone_fragment.xml
@@ -56,4 +56,13 @@
         android:text="@string/next"
         app:layout_constraintBottom_toBottomOf="parent" />
 
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="30dp"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@id/nextButton" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
