--- a/example/src/main/res/layout/fragment_nol_pay.xml
+++ b/example/src/main/res/layout/fragment_nol_pay.xml
@@ -18,27 +18,15 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/mobileCountryCode"
-        android:layout_width="60dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/large_vertical_margin"
-        android:background="@android:color/transparent"
-        android:gravity="center"
-        android:hint="+971"
-        android:inputType="phone"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/title" />
-
-    <EditText
         android:id="@+id/mobileNumber"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/large_vertical_margin"
         android:background="@android:color/transparent"
-        android:hint="Mobile number"
+        android:hint="+97121234567"
         android:inputType="phone"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/mobileCountryCode"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/title" />
 
     <Button
