chore: updated example app

--- a/example/src/main/res/layout/fragment_settings.xml
+++ b/example/src/main/res/layout/fragment_settings.xml
@@ -143,10 +143,18 @@
             </RadioGroup>
 
             <androidx.appcompat.widget.SwitchCompat
-                android:id="@+id/disableInitScreen"
+                android:id="@+id/useLegacyWorkflows"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
+                android:checked="true"
+                android:text="@string/workflows_settings" />
+
+            <androidx.appcompat.widget.SwitchCompat
+                android:id="@+id/disableInitScreen"
+                android:layout_width="match_parent"
+                android:layout_marginHorizontal="10dp"
+                android:layout_height="wrap_content"
                 android:text="@string/ui_settings_disable_init_screen" />
 
             <com.google.android.material.textfield.TextInputLayout
