fix: adds "textNoSuggestions" to the input type of the card form input fields so that the keyboard cache will not be shown when the input field is selected

--- a/primer-sdk-android/src/main/res/layout/fragment_card_form.xml
+++ b/primer-sdk-android/src/main/res/layout/fragment_card_form.xml
@@ -70,7 +70,7 @@
                 android:digits="0123456789 "
                 android:drawablePadding="10dp"
                 android:imeOptions="actionNext"
-                android:inputType="number"
+                android:inputType="number|textNoSuggestions"
                 tools:ignore="TouchTargetSizeCheck"
                 tools:text="1234123412341234"
                 tools:textColor="@android:color/black" />
@@ -101,7 +101,7 @@
                     android:layout_height="wrap_content"
                     android:digits="0123456789/ "
                     android:imeOptions="actionNext"
-                    android:inputType="date"
+                    android:inputType="date|textNoSuggestions"
                     tools:ignore="TouchTargetSizeCheck" />
             </io.primer.android.ui.components.TextInputWidget>
 
@@ -122,7 +122,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:imeOptions="actionNext"
-                    android:inputType="number"
+                    android:inputType="number|textNoSuggestions"
                     android:maxLength="4"
                     tools:ignore="TouchTargetSizeCheck" />
             </io.primer.android.ui.components.TextInputWidget>
@@ -144,7 +144,7 @@
                 style="@style/Primer.FormInput.Outbox.Input"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="textPersonName"
+                android:inputType="textPersonName|textNoSuggestions"
                 android:maxLines="1"
                 tools:ignore="TouchTargetSizeCheck" />
         </io.primer.android.ui.components.TextInputWidget>
